feat: fix lab6 PATH to output dir

--- a/lab6/pom.xml
+++ b/lab6/pom.xml
@@ -20,12 +20,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.0.1</version>
@@ -78,7 +72,7 @@
           <artifactId>tomcat7-maven-plugin</artifactId>
           <version>2.2</version>
           <configuration>
-            <port>9090</port>
+            <warSourceDirectory>src/main/webapp</warSourceDirectory>
           </configuration>
         </plugin>
       </plugins>
